Uploaded image for project: 'Apache NiFi MiNiFi C++'
  1. Apache NiFi MiNiFi C++
  2. MINIFICPP-1978

MergeContent should flush bins even when they don't exactly reach the max size.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.13.0
    • None

    Description

      It looks like MergeContent will fill up Bins until they reach the max group size, and reject further flow files when that would push the bin over the max size. If the last flow file doesn't exactly reach the max group size, the bin is not flushed, but it also cannot accept new flow files. We should come up with a way to flush "almost full" bins in a timely manner.

      Attachments

        Activity

          People

            adebreceni Adam Debreceni
            szaszm Marton Szasz
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 1h
                1h