MINIFICPP-1978 - Flush MergeContent bundles when its size would grow beyond max group size

Signed-off-by: Ferenc Gerlits <fgerlits@gmail.com>
This closes #1449